--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -76,6 +76,7 @@
   </div>
 
   <link rel="stylesheet" href="index.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
