--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -12,11 +12,13 @@
 <div id="wrapper" class="wrapanim varWrapperClass">
   <header>
     <h1>
-      <a href="/" title="Альтер Эго Групп" class="td-logo">
-					<span class="band">
-            <img src="images/logo-100-white.png">
-					</span>
-      </a>
+        <a href="/" title="Альтер Эго Групп" class="td-logo">
+            <span class="band">
+                <svg>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./images/svg/alterego-logo.svg#logo"></use>
+                </svg>
+            </span>
+        </a>
       <span>Альтер Эго Групп -<br> креативная команда<br> и богатый опыт.</span>
     </h1>
 
