--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -211,24 +211,8 @@
       </div>
     </div>
 
-    <%= _.template(require('./../includes/clients.html'))([]) %>
+<%= _.template(require('./../includes/clients.html'))([]) %>
 
-    <div class="start-project aniborder" id="start-project">
-      <div class="container clearfix">
-        <div class="container-small clearfix">
-          <h2 class="wow fadeInUpSmall">Вы ищете надежного подрядчика <br>для реализаци мечты?</h2>
-          <div class="block-title draw wow fadeIn" data-wow-delay="0.3s">
-            <div class="title">Обращайтесь</div>
-            <p>Мы предложим варианты в течении 24 часов</p>
-          </div>
-
-          <div class="start-project-block wow fadeIn">
-            <div class="launch"></div>
-            <h3>У вас есть <br>заветная мечта?</h3>
-            <a href="#" title="">Давайте поговорим об этом</a>
-          </div>
-        </div>
-      </div>
-    </div>
+<%= _.template(require('./../includes/start-project.html'))([]) %>
 
 <%= _.template(require('./../includes/footer.html'))([]) %>
