--- a/src/html/views/event.html
+++ b/src/html/views/event.html
@@ -1,291 +1,15 @@
 <%= _.template(require('./../includes/header.html'))([]) %>
 
-    <section class="agency-page" id="agency-page">
-      <div class="container clearfix">
-        <div class="container-small clearfix">
-          <div class="block-title bte draw wow fadeInDown  btb-active" style="visibility: visible; animation-name: fadeInDown;">
-            <div class="title">Event & BTL</div>
-            <p>Незабываемые события любого масштаба</p>
-          </div>
-          <div class="agency-tag wow fadeInUpSmall" style="visibility: visible; animation-name: fadeInUpSmall;">
-            <h2>Creative &amp; innovative<br> design agency.</h2>
-            <p>Where art enthusiasts &amp; tech freaks <br>connect via innovative ideas.</p>
-          </div>
-        </div>
-      </div>
-      <div class="container clearfix">
-        <div class="container-medium clearfix">
-          <div class="about-agency wow fadeInUpSmall" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUpSmall;">
-            <p><strong>Trionn Design is one of India's leading and trusted outsource web design and development agencies, located in Rajkot, Gujarat. </strong></p>
-            <p>Founded in September 2012, our agency creates Web Interfaces, Brands, IOS, Android application designs, game design and custom Web, Content management, e-commerce development.</p>
-            <p>We deliver creative, strategic and innovative solutions to help brands with new challenges while managing every touch-point.</p>
-          </div>
-          <div class="agency-statue wow fadeInUpSmall" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUpSmall;">
-            <a href="blog/trionn-logo-brand-history" class="agency-history" title="">
-              <div class="title">History</div>
-              <p>
-                <svg height="95px" width="135px" role="img">
-                  <svg class="tdfl1" height="95px" width="135px" role="img"><use xlink:href="images/svg_symbols.svg#td-l1"></use></svg>
-                  <svg class="tdfl2" height="95px" width="135px" role="img"><use xlink:href="images/svg_symbols.svg#td-l2"></use></svg>
-                  <svg class="tdfl3" height="95px" width="135px" role="img"><use xlink:href="images/svg_symbols.svg#td-l3"></use></svg>
-                </svg>
-                <br>The history behind the Trionn name &amp; <br>the three heads lion brand</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
+<%= _.template(require('./../includes/event-description.html'))([]) %>
 
-    <section class="agency-design-dev">
-      <div class="container clearfix">
-        <div class="container-small clearfix">
-          <div class="agency-tag">
-            <h2 class="wow fadeInUpSmall" style="visibility: visible; animation-name: fadeInUpSmall;">We combine <br>design &amp; development</h2>
-          </div>
-        </div>
-        <div class="container-small clearfix">
-          <div class="block-title black-title draw" data-class="btcustom">
-            <div class="title">Services</div>
-            <p>This is what we <br>love to do</p>
-          </div>
-        </div>
-      </div>
-      <div class="container clearfix">
-        <div class="container-medium clearfix td-lx">
-          <div class="agency-design-dev-tag">
-            <div class="img tdlxe" style="transform: matrix(1, 0, 0, 1, 0, 50);"></div>
-            <h3 class="wow fadeIn" style="visibility: hidden; animation-name: none;">We are creative with our designs <br>&amp; logical in developments.</h3>
-          </div>
-        </div>
-      </div>
-      <div class="container clearfix">
-        <div class="container-small clearfix">
-          <div class="agency-design wow fadeInUpSmall" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-            <h4>Designs</h4>
-            <ul>
-              <li>User interface and UX</li>
-              <li>Website and visual design</li>
-              <li>Branding and Identities</li>
-              <li>Creative promo sites</li>
-              <li>Mobile application</li>
-              <li>Mobile websites</li>
-              <li>Infographics</li>
-            </ul>
-          </div>
-          <div class="agency-development wow fadeInUpSmall" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-            <h4>Development</h4>
-            <ul>
-              <li>Wordpress CMS</li>
-              <li>HTML5, CSS3 and jQuery</li>
-              <li>Magento E-commerce</li>
-              <li>Angular js and node js</li>
-              <li>Responsive frontend</li>
-              <li>IOS application</li>
-              <li>Codeigniter</li>
-            </ul>
-          </div>
-          <div class="agency-video-production wow fadeInUpSmall" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-            <h4>Video Production</h4>
-            <ul>
-              <li>Cinematography</li>
-              <li>Prewedding Shoots</li>
-              <li>Wedding Shoots</li>
-              <li>Advertisements</li>
-              <li>Explainer Videos</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+<%= _.template(require('./../includes/event-services.html'))([]) %>
 
-    <%= _.template(require('./../includes/clients.html'))([]) %>
+<%= _.template(require('./../includes/clients.html'))([]) %>
 
-    <section class="agency-awards">
-      <div class="container clearfix">
-        <h2 class="wow fadeInUpSmall" style="visibility: hidden; animation-name: none;">India's maximum award winning design <br>&amp; development agency</h2>
-        <div class="block-title wow fadeIn draw" data-class="btcustom" style="visibility: hidden; animation-name: none;">
-          <div class="title">Awards</div>
-          <p>Our honors &amp; <br>awards</p>
-        </div>
-        <div class="container-medium clearfix">
-          <div class="award-left-col wow fadeIn" style="visibility: hidden; animation-name: none;">
-            <div class="award award-adesign">
-              <div class="award-wrapper">
-                <div class="bx-wrapper" style="max-width: 100%; margin: 0px auto;"><div class="bx-viewport" aria-live="polite" style="width: 100%; overflow: hidden; position: relative; height: 582px;"><ul class="bx-slider" style="width: 2215%; position: relative; transition-duration: 0s; transform: translate3d(-762px, 0px, 0px);"><li style="float: left; list-style: outside none none; position: relative; width: 762px;" class="bx-clone" aria-hidden="true"><img class="wow fadeIn" src="images/awards/adesign2.jpg" alt="Won silver trophy from Adesign awards" style="visibility: hidden; animation-name: none;"></li>
-                  <li style="float: left; list-style: outside none none; position: relative; width: 762px;" aria-hidden="false"><img class="wow fadeIn" src="images/awards/adesign.jpg" alt="Won silver trophy from Adesign awards" style="visibility: hidden; animation-name: none;"></li>
-                  <li style="float: left; list-style: outside none none; position: relative; width: 762px;" aria-hidden="true"><img class="wow fadeIn" src="images/awards/adesign2.jpg" alt="Won silver trophy from Adesign awards" style="visibility: hidden; animation-name: none;"></li>
-                  <li style="float: left; list-style: outside none none; position: relative; width: 762px;" class="bx-clone" aria-hidden="true"><img class="wow fadeIn" src="images/awards/adesign.jpg" alt="Won silver trophy from Adesign awards" style="visibility: hidden; animation-name: none;"></li></ul></div></div>
-              </div>
-            </div>
-            <div class="award award-cssreel wow fadeIn" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-            </div>
-          </div>
-          <div class="award-right-col">
-            <div class="award award-awwwards wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-            </div>
-            <div class="award award-cssdesign wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-            </div>
-            <div class="award award-fiftyplus wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-              <div class="award-wrapper">
-                50<em>+</em>
-                <span>Awards we won</span>
-              </div>
-            </div>
-            <div class="award award-cssmoz wow fadeIn" data-wow-delay="0.5s" style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">
-            </div>
-            <div class="award award-webguru wow fadeIn" data-wow-delay="0.7s" style="visibility: hidden; animation-delay: 0.7s; animation-name: none;">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+<%= _.template(require('./../includes/event-awards.html'))([]) %>
 
-    <section class="agency-hero">
-      <div class="container clearfix">
-        <div class="container-small clearfix">
-          <div class="agency-tag">
-            <h2 class="wow fadeInUpSmall" style="visibility: hidden; animation-name: none;">We are out of box <br>thinkers</h2>
-          </div>
-        </div>
-        <div class="container-small clearfix" data-class="btcustom">
-          <div class="block-title black-title wow draw fadeIn" style="visibility: hidden; animation-name: none;">
-            <div class="title">Team</div>
-            <p>We are rockstars</p>
-          </div>
-        </div>
-        <div class="container-medium clearfix td-ax">
-          <div class="agency-founder-poster">
-            <div class="img tdaxe" style="transform: matrix(1, 0, 0, 1, 0, 100);"></div>
-            <span class="lucky-number">99</span>
-            <a href="https://www.linkedin.com/in/sunnyrathod" target="_blank" class="linkedin wow fadeInUpSmall" data-wow-delay="0.2s" title="LinkedIn" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-              <svg width="28px" height="28px" role="img" class="linkedin-svg"><use xlink:href="images/svg_symbols.svg#linkedin-logo"></use></svg>
-            </a>
-            <div class="agency-founder-poster-wrapper  wow fadeIn" style="visibility: hidden; animation-name: none;">
-              <p>Today, nothing is possible without design. The future of the design field will always be green, but at the same time challenging and imaginary. This is because creativity never comes to an end; the only limit is the sky.</p>
-              <h3>Sunny Rathod</h3>
-              <i>- Founder &amp; CEO</i>
+<%= _.template(require('./../includes/gallery.html'))([]) %>
 
-            </div>
-          </div>
-        </div>
-        <div class="agency-heros">
-          <div class="container-small clearfix">
-            <ul>
-              <li class="wow fadeIn" data-wow-delay="0.1s" style="visibility: hidden; animation-delay: 0.1s; animation-name: none;">
-                <div class="img-clone rs1"></div>
-                <div class="img rs1"></div>
-                <div class="hero-name">Bankim</div>
-                <div class="hero-desig">- Sr. Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design heros">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <div class="img-clone rs2"></div>
-                <div class="img rs2"></div>
-                <div class="hero-name">Prabhat</div>
-                <div class="hero-desig">- Project Manager</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-                <div class="img-clone rs3"></div>
-                <div class="img rs3"></div>
-                <div class="hero-name">Gaurav</div>
-                <div class="hero-desig">- Developer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <div class="img-clone rs5"></div>
-                <div class="img rs5"></div>
-                <div class="hero-name">Viral</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.5s" style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">
-                <div class="fixbox-wrapper">
-                  <div class="fixbox">
-                    <div class="heros-wrapper wow fadeIn" style="visibility: hidden; animation-name: none;">We were born <br>creative</div>
-                  </div>
-                </div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Darshan</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.7s" style="visibility: hidden; animation-delay: 0.7s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Ravindrasinh</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-
-              <li class="wow fadeIn" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                <div class="img-clone rs8"></div>
-                <div class="img rs8"></div>
-                <div class="hero-name">Nilesh </div>
-                <div class="hero-desig">- S.Tester</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="0.9s" style="visibility: hidden; animation-delay: 0.9s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Bhagirathsinh</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="1.0s" style="visibility: hidden; animation-delay: 1s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Rushi </div>
-                <div class="hero-desig">- Developer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-
-              <li class="wow fadeIn" data-wow-delay="1.1s" style="visibility: hidden; animation-delay: 1.1s; animation-name: none;">
-                <div class="img-clone rs9"></div>
-                <div class="img rs9"></div>
-                <div class="hero-name">Devang </div>
-                <div class="hero-desig">- Creative Director</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="1.2s" style="visibility: hidden; animation-delay: 1.2s; animation-name: none;">
-                <div class="img-clone rs10"></div>
-                <div class="img rs10"></div>
-                <div class="hero-name">Himansu </div>
-                <div class="hero-desig">- Cinematic Videographer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-
-              <li class="wow fadeIn" data-wow-delay="1.3s" style="visibility: hidden; animation-delay: 1.3s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Umang</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-              <li class="wow fadeIn" data-wow-delay="1.4s" style="visibility: hidden; animation-delay: 1.4s; animation-name: none;">
-                <div class="img-clone no0"></div>
-                <div class="img no0"></div>
-                <div class="hero-name">Ayaz</div>
-                <div class="hero-desig">- Designer</div>
-                <img src="images/heros/spacer.png" alt="Trionn Design Rockstars">
-              </li>
-
-              <li class="wow fadeIn" data-wow-delay="1.2s" style="visibility: hidden; animation-delay: 1.2s; animation-name: none;">
-                <div class="fixbox-wrapper">
-                  <div class="fixbox">
-                    <a href="mailto:hr@trionndesign.com" class="heros-wrapper wow fadeIn" title="" style="visibility: hidden; animation-name: none;">Join now!</a>
-                  </div>
-                </div>
-                <img src="images/heros/spacer.png" alt="">
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+<%= _.template(require('./../includes/start-project.html'))([]) %>
 
 <%= _.template(require('./../includes/footer.html'))([]) %>
