--- a/src/html/includes/event-services.html
+++ b/src/html/includes/event-services.html
@@ -22,38 +22,44 @@
     </div>
     <div class="container clearfix">
         <div class="container-small clearfix">
-            <div class="agency-item agency-item-1 wow fadeInUpSmall" data-wow-delay="0.2s" style="margin: -140px 0 0 0; visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <h4>Корпоративные мероприятия</h4>
-                <ul>
-                    <li>Корпоративные мероприятия</li>
-                    <li>Тимбилдинги</li>
-                    <li>Встречи, переговоры, презентации</li>
-                    <li>Конференции, форумы и конгрессы, семинары</li>
-                    <li>Выставки</li>
-                    <li>Юбилеи компаний</li>
-                    <li>Поощрительные поездки</li>
-                    <li>Программы лояльности</li>
-                    <li>Бизнес мероприятия</li>
-                    <li>Торговые события</li>
-                </ul>
-            </div>
-            <div class="agency-item agency-item-2 wow fadeInUpSmall" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-                <h4>Частные мероприятия</h4>
-                <ul>
-                    <li>Свадьбы</li>
-                    <li>Выпускные</li>
-                    <li>Розыгрыши</li>
-                    <li>Детские праздники</li>
-                </ul>
-            </div>
-            <div class="agency-item agency-item-3 wow fadeInUpSmall" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <h4>Массовые мероприятия</h4>
-                <ul>
-                    <li>Фестивали</li>
-                    <li>Шоу</li>
-                    <li>Концерты</li>
-                </ul>
-            </div>
+            <a href="/event-item-corporative.html">
+                <div class="agency-item agency-item-1 wow fadeInUpSmall" data-wow-delay="0.2s" style="margin: -140px 0 0 0; visibility: hidden; animation-delay: 0.2s; animation-name: none;">
+                    <h4>Корпоративные мероприятия</h4>
+                    <ul>
+                        <li>Корпоративные мероприятия</li>
+                        <li>Тимбилдинги</li>
+                        <li>Встречи, переговоры, презентации</li>
+                        <li>Конференции, форумы и конгрессы, семинары</li>
+                        <li>Выставки</li>
+                        <li>Юбилеи компаний</li>
+                        <li>Поощрительные поездки</li>
+                        <li>Программы лояльности</li>
+                        <li>Бизнес мероприятия</li>
+                        <li>Торговые события</li>
+                    </ul>
+                </div>
+            </a>
+            <a href="/event-item-individual.html">
+                <div class="agency-item agency-item-2 wow fadeInUpSmall" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
+                    <h4>Частные мероприятия</h4>
+                    <ul>
+                        <li>Свадьбы</li>
+                        <li>Выпускные</li>
+                        <li>Розыгрыши</li>
+                        <li>Детские праздники</li>
+                    </ul>
+                </div>
+            </a>
+            <a href="/event-item-mass.html">
+                <div class="agency-item agency-item-3 wow fadeInUpSmall" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
+                    <h4>Массовые мероприятия</h4>
+                    <ul>
+                        <li>Фестивали</li>
+                        <li>Шоу</li>
+                        <li>Концерты</li>
+                    </ul>
+                </div>
+            </a>
         </div>
     </div>
 </section>
