--- a/src/html/includes/start-project.html
+++ b/src/html/includes/start-project.html
@@ -9,8 +9,8 @@
 
             <div class="start-project-block wow fadeIn">
                 <div class="launch"></div>
-                <h3>У вас есть <br>заветная мечта?</h3>
-                <a href="#" title="">Давайте поговорим об этом</a>
+                <h3>У вас есть <br>интересная идея?</h3>
+                <a href="#" title="">Давайте её обсудим</a>
             </div>
         </div>
     </div>
