--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -23,7 +23,7 @@
     </h1>
 
     <div class="header-right">
-      <a href="#" title="" class="start-project">Start a project</a>
+      <a href="/start-project.html" title="" class="start-project">Start a project</a>
       <a href="javascript:void(0)" title="Navigation" class="menu-icon" @click="handleMenu"><em>Меню</em><span></span></a>
     </div>
 
