--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,9 +4,12 @@
       <div class="landing-wrapper" style="height: 976px;">
         <div class="lion">
           <div class="lion" id="l_svg">
-              <svg x="0px" y="0px" width="749.495px" height="755.434px" xml:space="preserve">
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./images/svg/lion.svg#svglion"></use>
-              </svg>
+              <div class="alter-img">
+                <!--<img src="images/alter-circles.png" alt="Alter Ego" class="trionn-lion">-->
+              </div>
+              <!--<svg x="0px" y="0px" width="749.495px" height="755.434px" xml:space="preserve">-->
+                  <!--<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./images/svg/lion.svg#svglion"></use>-->
+              <!--</svg>-->
           </div>
           <div class="landing-slogan">
             <div class="landing-slogan-wrapper">
