--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -31,19 +31,11 @@
       <div class="container clearfix">
         <div class="container-small clearfix">
           <nav>
-            <ul>
-              <li>
-                <a href="/event.html" class="draw" title="">Event</a>
-              </li>
-              <li>
-                <a href="/content.html" class="draw" title="">Content</a>
-              </li>
-              <li>
-                <a href="/digital.html" class="draw" title="">Digital</a>
-              </li>
-              <li>
-                <a href="/contact.html" class="draw" title="">Contact</a></li>
-            </ul>
+              <ul>
+                  <li v-for="item in items" :style="mainNavigationStyleLi">
+                      <a class="draw" :href="item + '.html'">{{ item }}</a>
+                  </li>
+              </ul>
           </nav>
           <article class="map-icon">
             Мы на связи<br>
