--- a/src/html/includes/clients.html
+++ b/src/html/includes/clients.html
@@ -1,6 +1,6 @@
 <section class="agency-clients">
     <div class="container clearfix">
-        <h2 class="wow fadeInUpSmall" style="visibility: hidden; animation-name: none;">Many popular brands &amp; sectors entrust<br> their company image in us!</h2>
+        <h2 class="wow fadeInUpSmall" style="visibility: hidden; animation-name: none;">Многие бренды и компании доверяют нам </br>создание впечатления о себе!</h2>
         <div class="block-title wow fadeIn draw" data-wow-delay="0.2s" data-class="btcustom" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
             <div class="title">Клиенты</div>
             <p>Мы любим наших клиентов </br>и они ценят нас</p>
