--- a/src/html/includes/start-project.html
+++ b/src/html/includes/start-project.html
@@ -1,7 +1,7 @@
 <div class="start-project aniborder" id="start-project">
     <div class="container clearfix">
         <div class="container-small clearfix">
-            <h2 class="wow fadeInUpSmall">Вы ищете надежного подрядчика <br>для реализаци мечты?</h2>
+            <h2 class="wow fadeInUpSmall">Вы ищете надежного подрядчика <br>для реализации мечты?</h2>
             <div class="block-title draw wow fadeIn" data-wow-delay="0.3s">
                 <div class="title">Обращайтесь</div>
                 <p>Мы предложим варианты в течении 24 часов</p>
