--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -9981,3 +9981,11 @@ option {
     }
   }
 }
+
+
+//.fade-enter-active, .fade-leave-active {
+//  transition: opacity .5s;
+//}
+//.fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
+//  opacity: 0;
+//}
