--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -27,6 +27,10 @@
     </div>
 </div>
 
+<template>
+    <div ref="box" class="box"></div>
+</template>
+
 <div class="home clearfix" id="home" style="height: 436px;">
     <div class="home-wrapper">
         <div class="tag-line" style="height: 436px;">
@@ -115,7 +119,7 @@
         <div class="container-medium clearfix">
             <div class="agency-tag ">
                 <h2 class="wow fadeInUpSmall">Креатив <br>дизайн и разработка</h2>
-                <div class="block-title draw wow fadeIn" data-wow-delay="0.4s" :class="drawHover ? '' : 'btb-active'">
+                <div class="block-title draw wow fadeIn" data-wow-delay="0.4s" >
                     <div class="title">Агенство</div>
                     <p>Лауреат множества наград</p>
                 </div>
