--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -14,8 +14,7 @@
             <div class="landing-slogan">
                 <div class="landing-slogan-wrapper">
                     <h2 class="wow fadeInUpSmall" style="animation-delay: 0.5s; animation-name: fadeInUpSmall;">Креатив
-                        и
-                        инновации <br>во всём</h2>
+                        и инновации <br>во всём</h2>
                     <a href="#" title="" class="wow fadeInUpSmall" data-wow-delay="0.5s"
                        style="animation-delay: 0.5s; animation-name: fadeInUpSmall;">Подробнее</a>
                 </div>
