--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3490,7 +3490,7 @@ nav {
 .landing-wrapper {
   display: table-cell;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   text-align: left;
 }
 
@@ -3595,7 +3595,7 @@ nav {
 .tagline-wrapper {
   display: table-cell;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   text-align: center;
   vertical-align: middle;
   position: relative;
@@ -9981,11 +9981,3 @@ option {
     }
   }
 }
-
-
-//.fade-enter-active, .fade-leave-active {
-//  transition: opacity .5s;
-//}
-//.fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
-//  opacity: 0;
-//}
